fixed menu overflow

--- a/css/style.css
+++ b/css/style.css
@@ -48,17 +48,16 @@ header {
     font-size: 50px;
 }
 
-/* content */
+/* menu */
 
 .menu {
+    flex: 1 1 auto;
     font-family: 'Notable', sans-serif;
     position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    height:40%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -66,8 +65,8 @@ header {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: rgb(80, 80, 80);
-    z-index: -1; /* bring it to the front */
-    padding: 30px;
+    padding: 30px 100px;
+    overflow: hidden;
 }
 
 #try-again-container {
@@ -76,7 +75,6 @@ header {
     gap: 20px;
     text-align: center;
     font-size: 40px;
-    overflow: hidden;
     color: white;
 }
 
@@ -97,6 +95,8 @@ header {
     gap: 5px;
 }
 
+/* content */
+
 .flexbox-content {
     flex: 1 1 auto;
     display: flex;
@@ -106,7 +106,7 @@ header {
 }
 
 .interface {
-    flex: 10 0 500px; /* fixed-width */
+    flex: 10 0 400px; /* fixed-width */
     display: flex;
     flex-direction: column;
     justify-content: center;
